# tmp

./: .devcontainer.json  .dockerignore  .gitignore  CITATION.cff  Dockerfile  Dockerfile.runtime  LICENSE  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  sonar-project.properties  tsconfig.app.json  tsconfig.json  tsconfig.vitest.json  twa-manifest.json  vite.config.ts
.github/: Dockerfile  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: custom.md  issue-template.md  issue_template.md  template-padrão-de-issue.md
.github/workflows/: build-server.yaml  build.yaml  ci.yaml  devcontainer.yaml  development.yaml  release-server.yaml  release.yaml  security.yaml  test-server.yaml  test.yaml
.hookci/: hookci.yaml
.hookci/hooks/: pre-commit  pre-push
Artefatos/: Makefile  README.md  config.plantuml
Artefatos/diagramas/: classes.wsd  componentes.wsd  estados.wsd  implantacao.wsd  pacotes.wsd  yaml.wsd
Artefatos/memoriais/: Memorial Gabriel.md  memorial_henrique.md
Codigo/: Dockerfile  Makefile  config.mk  pyproject.toml  sonar-project.properties
Codigo/debian/: control  install  manpages  rules
Codigo/docker/: ci.Dockerfile  deb.Dockerfile  pip.Dockerfile
Codigo/docs/: classes.wsd  componentes.wsd  estados.wsd  hookci.1  implantacao.wsd  pacotes.wsd  yaml.wsd
Codigo/docs/communication/: help.wsd  hook.wsd  init.wsd  migrate.wsd  run.wsd
Codigo/docs/sequence/: help.wsd  hook.wsd  init.wsd  migrate.wsd  run.wsd
Codigo/docs/system_sequence/: hook.wsd  init.wsd  run.wsd
Codigo/extension/: .vscodeignore  README.md  package-lock.json  package.json
Codigo/extension/src/: extension.ts
Codigo/scripts/: dist  entrypoint  gendoc  sonar  test
Codigo/src/: hookci  hookci.py
Codigo/src/hookci/: __init__.py  containers.py  log.py
Codigo/src/hookci/application/: __init__.py  constants.py  errors.py  events.py  results.py  services.py
Codigo/src/hookci/domain/: __init__.py  config.py
Codigo/src/hookci/infrastructure/: __init__.py  constants.py  docker.py  errors.py  fs.py  yaml_handler.py
Codigo/src/hookci/presentation/: __init__.py  cli.py
Codigo/tests/: test_containers.py  test_hookci.py
Codigo/tests/application/: test_results.py  test_services.py
Codigo/tests/domain/: test_config.py
Codigo/tests/infrastructure/: test_docker.py  test_fs.py  test_yaml_handler.py
Codigo/tests/presentation/: test_cli.py
Divulgacao/Apresentacao/: README.md
Divulgacao/Video/: README.md
Documentacao/: viabilidade.md
codigo/backend/: docker-compose.yml
docs/editaveis/: Ata de Reunião 22_11_2024 - PMMG.docx  Documento de Visao.docx  PMMG API Routes.md
public/: manifest.json
scripts/: build-apk.sh  sonar.sh  version.sh  wasm-deps.sh
source/: .dockerignore  .env  docker-compose.yml
source/backend/: Dockerfile
src/: App.test.tsx  App.tsx  index.css  main.tsx  solver.worker.test.ts  solver.worker.ts
src/components/: NumberPad.test.tsx  NumberPad.tsx  PencilMarks.test.tsx  PencilMarks.tsx  SolverStepsPanel.test.tsx  SolverStepsPanel.tsx  SudokuCell.test.tsx  (+5 more)
src/wasudoku-wasm/: Cargo.toml
src/wasudoku-wasm/src/: board.rs  generate.rs  lib.rs  logical_solver.rs  solver.rs  types.rs  utils.rs
src/wasudoku-wasm/tests/: board.rs  generate.rs  logical_solver.rs  solver.rs  web.rs
(+103 files in other folders)
